Update results R markdown file for H1 and H2 to include estimated risk difference, in addition to estimated log-risk ratios, and format output.

--- a/analysis-complete-case/analysis-H1.Rmd
+++ b/analysis-complete-case/analysis-H1.Rmd
@@ -63,10 +63,11 @@ dat_primary_aim <- dat_primary_aim %>%
 dat_for_analysis <- dat_primary_aim %>%
   filter(is_include_main == 1) %>%
   select(participant_id, decision_point, eligibility, 
-         coinflip, Y,
+         coinflip,
+         Y,
          hour_coinflip_local, days_between_v1_and_coinflip_local,
          any_response_2qs, any_recent_eligible_dp, engagement_most_recent_eligible,
-         age, is_female, is_latino, is_not_latino_and_black, is_not_latino_and_other, 
+         age, is_male, is_latino, is_not_latino_and_black, is_not_latino_and_other, 
          baseline_tobacco_history, has_partner, income_val)
 ```
 
@@ -79,7 +80,7 @@ my_list <- list(Y = -1,
                 any_recent_eligible_dp = -1, 
                 engagement_most_recent_eligible = -1,
                 age = -1, 
-                is_female = -1, 
+                is_male = -1, 
                 is_latino = -1, 
                 is_not_latino_and_black = -1, 
                 is_not_latino_and_other = -1, 
@@ -93,7 +94,7 @@ logical_vec_cc <- dat_for_analysis %>%
   select(Y,
          hour_coinflip_local, days_between_v1_and_coinflip_local,
          any_response_2qs, any_recent_eligible_dp, engagement_most_recent_eligible,
-         age, is_female, is_latino, is_not_latino_and_black, is_not_latino_and_other,
+         age, is_male, is_latino, is_not_latino_and_black, is_not_latino_and_other,
          baseline_tobacco_history, has_partner, income_val) %>%
   complete.cases(.)
 
@@ -137,7 +138,7 @@ logical_vec_cc <- dat_for_analysis_elig %>%
   select(Y,
          hour_coinflip_local, days_between_v1_and_coinflip_local,
          any_response_2qs, any_recent_eligible_dp, engagement_most_recent_eligible,
-         age, is_female, is_latino, is_not_latino_and_black, is_not_latino_and_other, 
+         age, is_male, is_latino, is_not_latino_and_black, is_not_latino_and_other, 
          baseline_tobacco_history, has_partner, income_val) %>%
   complete.cases(.)
 ```
@@ -177,7 +178,7 @@ fit1 <- emee(
   treatment = "coinflip",
   rand_prob = 0.5,
   moderator_formula = ~ 1,  
-  control_formula = ~ age + is_female + is_latino + is_not_latino_and_black + is_not_latino_and_other + baseline_tobacco_history + has_partner + income_val + hour_coinflip_local + days_between_v1_and_coinflip_local + any_response_2qs + any_recent_eligible_dp + engagement_most_recent_eligible, 
+  control_formula = ~ age + is_male + is_latino + is_not_latino_and_black + is_not_latino_and_other + baseline_tobacco_history + has_partner + income_val + hour_coinflip_local + days_between_v1_and_coinflip_local + any_response_2qs + any_recent_eligible_dp + engagement_most_recent_eligible, 
   availability = "eligibility"
 )
 
@@ -234,7 +235,7 @@ fit1 <- wcls(
   treatment = "coinflip",
   rand_prob = 0.5,
   moderator_formula = ~ 1,  
-  control_formula = ~ age + is_female + is_latino + is_not_latino_and_black + is_not_latino_and_other + baseline_tobacco_history + has_partner + income_val + hour_coinflip_local + days_between_v1_and_coinflip_local + any_response_2qs + any_recent_eligible_dp + engagement_most_recent_eligible, 
+  control_formula = ~ age + is_male + is_latino + is_not_latino_and_black + is_not_latino_and_other + baseline_tobacco_history + has_partner + income_val + hour_coinflip_local + days_between_v1_and_coinflip_local + any_response_2qs + any_recent_eligible_dp + engagement_most_recent_eligible, 
   availability = "eligibility"
 )
 
@@ -251,7 +252,7 @@ dat_result <- rbind(dat_result_causal, dat_result_control)
 dat_result %>% round(., 3) %>% format(., nsmall = 3) %>% write.csv(., file.path("analysis-complete-case", "formatted-output", "H1", "risk_difference_scale_H1.csv"), row.names = TRUE)
 ```
 
-## Estimated prevalence by group
+## Estimated prevalence by group (marginal over time)
 
 ```{r}
 dat_prevalence <- dat_for_analysis %>%
@@ -270,6 +271,8 @@ dat_prevalence %>% round(., 3) %>% format(., nsmall = 3) %>% write.csv(., file.p
 
 # Exploratory Analysis (Linear Effect of Time)
 
+## Day in study
+
 ```{r}
 fit2 <- emee(
   data = dat_for_analysis,
@@ -278,7 +281,7 @@ fit2 <- emee(
   treatment = "coinflip",
   rand_prob = 0.5,
   moderator_formula = ~ days_between_v1_and_coinflip_local,  
-  control_formula = ~ age + is_female + is_latino + is_not_latino_and_black + is_not_latino_and_other + baseline_tobacco_history + has_partner + income_val + hour_coinflip_local + days_between_v1_and_coinflip_local + any_response_2qs + any_recent_eligible_dp + engagement_most_recent_eligible, 
+  control_formula = ~ age + is_male + is_latino + is_not_latino_and_black + is_not_latino_and_other + baseline_tobacco_history + has_partner + income_val + hour_coinflip_local + days_between_v1_and_coinflip_local + any_response_2qs + any_recent_eligible_dp + engagement_most_recent_eligible, 
   availability = "eligibility"
 )
 
@@ -292,10 +295,39 @@ dat_result_control <- summary(fit2, show_control_fit = TRUE)[["control_variables
 dat_result <- rbind(dat_result_causal, dat_result_control)
 
 # Format output to 3 decimal places
-dat_result %>% round(., 3) %>% format(., nsmall = 3) %>% write.csv(., file.path("analysis-complete-case", "formatted-output", "H1", "log_risk_ratio_scale_H1_linear_time.csv"), row.names = TRUE)
+dat_result %>% round(., 3) %>% format(., nsmall = 3) %>% write.csv(., file.path("analysis-complete-case", "formatted-output", "H1", "log_risk_ratio_scale_H1_linear_day.csv"), row.names = TRUE)
+```
+
+## Hour of day
+
+```{r}
+fit2 <- emee(
+  data = dat_for_analysis,
+  id = "participant_id",  
+  outcome = "Y",
+  treatment = "coinflip",
+  rand_prob = 0.5,
+  moderator_formula = ~ hour_coinflip_local,  
+  control_formula = ~ age + is_male + is_latino + is_not_latino_and_black + is_not_latino_and_other + baseline_tobacco_history + has_partner + income_val + hour_coinflip_local + days_between_v1_and_coinflip_local + any_response_2qs + any_recent_eligible_dp + engagement_most_recent_eligible, 
+  availability = "eligibility"
+)
+
+summary(fit2, show_control_fit = TRUE)
+```
+
+```{r}
+dat_result_causal <- summary(fit2, show_control_fit = TRUE)[["causal_excursion_effect"]]
+dat_result_control <- summary(fit2, show_control_fit = TRUE)[["control_variables"]]
+
+dat_result <- rbind(dat_result_causal, dat_result_control)
+
+# Format output to 3 decimal places
+dat_result %>% round(., 3) %>% format(., nsmall = 3) %>% write.csv(., file.path("analysis-complete-case", "formatted-output", "H1", "log_risk_ratio_scale_H1_linear_hour.csv"), row.names = TRUE)
 ```
 
 # Exploratory Analysis (Quadratic Effect of Time)
+
+## Day in study
 
 ```{r}
 fit3 <- emee(
@@ -305,7 +337,7 @@ fit3 <- emee(
   treatment = "coinflip",
   rand_prob = 0.5,
   moderator_formula = ~ days_between_v1_and_coinflip_local + I(days_between_v1_and_coinflip_local * days_between_v1_and_coinflip_local),  
-  control_formula = ~ age + is_female + is_latino + is_not_latino_and_black + is_not_latino_and_other + baseline_tobacco_history + has_partner + income_val + hour_coinflip_local + days_between_v1_and_coinflip_local + I(days_between_v1_and_coinflip_local * days_between_v1_and_coinflip_local) + any_response_2qs + any_recent_eligible_dp + engagement_most_recent_eligible, 
+  control_formula = ~ age + is_male + is_latino + is_not_latino_and_black + is_not_latino_and_other + baseline_tobacco_history + has_partner + income_val + hour_coinflip_local + days_between_v1_and_coinflip_local + I(days_between_v1_and_coinflip_local * days_between_v1_and_coinflip_local) + any_response_2qs + any_recent_eligible_dp + engagement_most_recent_eligible, 
   availability = "eligibility"
 )
 
@@ -319,7 +351,34 @@ dat_result_control <- summary(fit3, show_control_fit = TRUE)[["control_variables
 dat_result <- rbind(dat_result_causal, dat_result_control)
 
 # Format output to 3 decimal places
-dat_result %>% round(., 3) %>% format(., nsmall = 3) %>% write.csv(., file.path("analysis-complete-case", "formatted-output", "H1", "log_risk_ratio_scale_H1_quadratic_time.csv"), row.names = TRUE)
+dat_result %>% round(., 3) %>% format(., nsmall = 3) %>% write.csv(., file.path("analysis-complete-case", "formatted-output", "H1", "log_risk_ratio_scale_H1_quadratic_day.csv"), row.names = TRUE)
+```
+
+## Hour of day
+
+```{r}
+fit3 <- emee(
+  data = dat_for_analysis,
+  id = "participant_id",  
+  outcome = "Y",
+  treatment = "coinflip",
+  rand_prob = 0.5,
+  moderator_formula = ~ hour_coinflip_local + I(hour_coinflip_local * hour_coinflip_local),  
+  control_formula = ~ age + is_male + is_latino + is_not_latino_and_black + is_not_latino_and_other + baseline_tobacco_history + has_partner + income_val + hour_coinflip_local + I(hour_coinflip_local * hour_coinflip_local) + days_between_v1_and_coinflip_local + any_response_2qs + any_recent_eligible_dp + engagement_most_recent_eligible, 
+  availability = "eligibility"
+)
+
+summary(fit3, show_control_fit = TRUE)
+```
+
+```{r}
+dat_result_causal <- summary(fit3, show_control_fit = TRUE)[["causal_excursion_effect"]]
+dat_result_control <- summary(fit3, show_control_fit = TRUE)[["control_variables"]]
+
+dat_result <- rbind(dat_result_causal, dat_result_control)
+
+# Format output to 3 decimal places
+dat_result %>% round(., 3) %>% format(., nsmall = 3) %>% write.csv(., file.path("analysis-complete-case", "formatted-output", "H1", "log_risk_ratio_scale_H1_quadratic_hour.csv"), row.names = TRUE)
 ```
 
 # H1 Sensitivity Analysis
@@ -328,10 +387,11 @@ dat_result %>% round(., 3) %>% format(., nsmall = 3) %>% write.csv(., file.path(
 dat_for_analysis <- dat_primary_aim %>%
   filter(is_include_sensitivity == 1) %>%
   select(participant_id, decision_point, eligibility, 
-         coinflip, Y,
+         coinflip,
+         Y,
          hour_coinflip_local, days_between_v1_and_coinflip_local,
          any_response_2qs, any_recent_eligible_dp, engagement_most_recent_eligible,
-         age, is_female, is_latino, is_not_latino_and_black, is_not_latino_and_other, baseline_tobacco_history, has_partner, income_val)
+         age, is_male, is_latino, is_not_latino_and_black, is_not_latino_and_other, baseline_tobacco_history, has_partner, income_val)
 ```
 
 ```{r}
@@ -343,7 +403,7 @@ my_list <- list(Y = -1,
                 any_recent_eligible_dp = -1, 
                 engagement_most_recent_eligible = -1,
                 age = -1, 
-                is_female = -1, 
+                is_male = -1, 
                 is_latino = -1, 
                 is_not_latino_and_black = -1, 
                 is_not_latino_and_other = -1, 
@@ -357,7 +417,7 @@ logical_vec_cc <- dat_for_analysis %>%
   select(Y,
          hour_coinflip_local, days_between_v1_and_coinflip_local,
          any_response_2qs, any_recent_eligible_dp, engagement_most_recent_eligible,
-         age, is_female, is_latino, is_not_latino_and_black, is_not_latino_and_other,
+         age, is_male, is_latino, is_not_latino_and_black, is_not_latino_and_other,
          baseline_tobacco_history, has_partner, income_val) %>%
   complete.cases(.)
 
@@ -401,7 +461,7 @@ logical_vec_cc <- dat_for_analysis_elig %>%
   select(Y,
          hour_coinflip_local, days_between_v1_and_coinflip_local,
          any_response_2qs, any_recent_eligible_dp, engagement_most_recent_eligible,
-         age, is_female, is_latino, is_not_latino_and_black, is_not_latino_and_other, baseline_tobacco_history, has_partner, income_val) %>%
+         age, is_male, is_latino, is_not_latino_and_black, is_not_latino_and_other, baseline_tobacco_history, has_partner, income_val) %>%
   complete.cases(.)
 ```
 
@@ -440,7 +500,7 @@ fit1 <- emee(
   treatment = "coinflip",
   rand_prob = 0.5,
   moderator_formula = ~ 1,  
-  control_formula = ~ age + is_female + is_latino + is_not_latino_and_black + is_not_latino_and_other + baseline_tobacco_history + has_partner + income_val + hour_coinflip_local + days_between_v1_and_coinflip_local + any_response_2qs + any_recent_eligible_dp + engagement_most_recent_eligible, 
+  control_formula = ~ age + is_male + is_latino + is_not_latino_and_black + is_not_latino_and_other + baseline_tobacco_history + has_partner + income_val + hour_coinflip_local + days_between_v1_and_coinflip_local + any_response_2qs + any_recent_eligible_dp + engagement_most_recent_eligible, 
   availability = "eligibility"
 )
 
@@ -495,7 +555,7 @@ fit1 <- wcls(
   treatment = "coinflip",
   rand_prob = 0.5,
   moderator_formula = ~ 1,  
-  control_formula = ~ age + is_female + is_latino + is_not_latino_and_black + is_not_latino_and_other + baseline_tobacco_history + has_partner + income_val + hour_coinflip_local + days_between_v1_and_coinflip_local + any_response_2qs + any_recent_eligible_dp + engagement_most_recent_eligible, 
+  control_formula = ~ age + is_male + is_latino + is_not_latino_and_black + is_not_latino_and_other + baseline_tobacco_history + has_partner + income_val + hour_coinflip_local + days_between_v1_and_coinflip_local + any_response_2qs + any_recent_eligible_dp + engagement_most_recent_eligible, 
   availability = "eligibility"
 )
 
