--- a/analysis-complete-case/analysis-H3-app-usage-moderators.Rmd
+++ b/analysis-complete-case/analysis-H3-app-usage-moderators.Rmd
@@ -509,6 +509,8 @@ if(length(participants_fully_dropped) > 0){
 }
 ```
 
+## 95% Confidence Intervals
+
 ```{r}
 fit1 <- emee(
   data = dat_for_analysis,
@@ -521,17 +523,74 @@ fit1 <- emee(
   availability = "overall_eligibility"
 )
 
-summary(fit1, show_control_fit = TRUE)
+Lmat <- rbind(c(1,1))
+summary(fit1, show_control_fit = TRUE, lincomb = Lmat)
 ```
 
 ```{r}
-dat_result_causal <- summary(fit1, show_control_fit = TRUE)[["causal_excursion_effect"]]
-dat_result_control <- summary(fit1, show_control_fit = TRUE)[["control_variables"]]
+dat_result_causal <- summary(fit1, show_control_fit = TRUE, lincomb = Lmat)[["causal_excursion_effect"]]
+dat_result_control <- summary(fit1, show_control_fit = TRUE, lincomb = Lmat)[["control_variables"]]
 
 dat_result <- rbind(dat_result_causal, dat_result_control)
 
 # Format output to 3 decimal places
-dat_result %>% round(., 3) %>% format(., nsmall = 3) %>% write.csv(., file.path("analysis-complete-case", "formatted-output", "H3-app-usage-moderators", "log_risk_ratio_scale_H3_any_app_usage_and_ema_preblock.csv"), row.names = TRUE)
+dat_result %>% round(., 3) %>% format(., nsmall = 3) %>% write.csv(., file.path("analysis-complete-case", "formatted-output", "H3-app-usage-moderators", "log_risk_ratio_scale_H3_any_app_usage_and_ema_preblock_CI95.csv"), row.names = TRUE)
+```
+
+## 90% Confidence Intervals
+
+```{r}
+summary(fit1, show_control_fit = TRUE, lincomb = Lmat, conf_level = 0.90)
+```
+
+```{r}
+dat_result_causal <- summary(fit1, show_control_fit = TRUE, lincomb = Lmat, conf_level = 0.90)[["causal_excursion_effect"]]
+dat_result_control <- summary(fit1, show_control_fit = TRUE, lincomb = Lmat, conf_level = 0.90)[["control_variables"]]
+
+dat_result <- rbind(dat_result_causal, dat_result_control)
+
+# Format output to 3 decimal places
+dat_result %>% round(., 3) %>% format(., nsmall = 3) %>% write.csv(., file.path("analysis-complete-case", "formatted-output", "H3-app-usage-moderators", "log_risk_ratio_scale_H3_any_app_usage_and_ema_preblock_CI90.csv"), row.names = TRUE)
+```
+
+## Estimated effect on the risk ratio scale
+
+### 95% Confidence Intervals
+
+```{r}
+dat_results_contrast <- summary(fit1, show_control_fit = TRUE, lincomb = Lmat)$causal_excursion_effect[c(1,3),]
+```
+
+```{r}
+exp_estimates <- exp(dat_results_contrast[,"Estimate"])
+rrLB95 <- exp(dat_results_contrast[,"95% LCL"])
+rrUB95 <- exp(dat_results_contrast[,"95% UCL"])
+
+dat_exp_scale <- data.frame(exp_estimates = exp_estimates, rrLB95 = rrLB95, rrUB95 = rrUB95)
+
+dat_exp_scale
+
+# Format output to 3 decimal places
+dat_exp_scale %>% round(., 3) %>% format(., nsmall = 3) %>% write.csv(., file.path("analysis-complete-case", "formatted-output", "H3-app-usage-moderators", "risk_ratio_scale_H3_any_app_usage_and_ema_preblock_CI95.csv"), row.names = TRUE)
+```
+
+### 90% Confidence Intervals
+
+```{r}
+dat_results_contrast <- summary(fit1, show_control_fit = TRUE, lincomb = Lmat, conf_level = 0.90)$causal_excursion_effect[c(1,3),]
+```
+
+```{r}
+exp_estimates <- exp(dat_results_contrast[,"Estimate"])
+rrLB <- exp(dat_results_contrast[,"90% LCL"])
+rrUB <- exp(dat_results_contrast[,"90% UCL"])
+
+dat_exp_scale <- data.frame(exp_estimates = exp_estimates, rrLB = rrLB, rrUB = rrUB)
+
+dat_exp_scale
+
+# Format output to 3 decimal places
+dat_exp_scale %>% round(., 3) %>% format(., nsmall = 3) %>% write.csv(., file.path("analysis-complete-case", "formatted-output", "H3-app-usage-moderators", "risk_ratio_scale_H3_any_app_usage_and_ema_preblock_CI90.csv"), row.names = TRUE)
 ```
 
 # Any response to brief survey between prior micro-randomization to current micro-randomization
@@ -761,6 +820,8 @@ if(length(participants_fully_dropped) > 0){
 }
 ```
 
+## 95% Confidence Intervals
+
 ```{r}
 fit1 <- emee(
   data = dat_for_analysis,
@@ -773,16 +834,72 @@ fit1 <- emee(
   availability = "overall_eligibility"
 )
 
-summary(fit1, show_control_fit = TRUE, lincomb = c(0,1))
+Lmat <- rbind(c(1,1))
+summary(fit1, show_control_fit = TRUE, lincomb = Lmat)
 ```
 
 ```{r}
-dat_result_causal <- summary(fit1, show_control_fit = TRUE)[["causal_excursion_effect"]]
-dat_result_control <- summary(fit1, show_control_fit = TRUE)[["control_variables"]]
+dat_result_causal <- summary(fit1, show_control_fit = TRUE, lincomb = Lmat)[["causal_excursion_effect"]]
+dat_result_control <- summary(fit1, show_control_fit = TRUE, lincomb = Lmat)[["control_variables"]]
 
 dat_result <- rbind(dat_result_causal, dat_result_control)
 
 # Format output to 3 decimal places
-dat_result %>% round(., 3) %>% format(., nsmall = 3) %>% write.csv(., file.path("analysis-complete-case", "formatted-output", "H3-app-usage-moderators", "log_risk_ratio_scale_H3_engagement_most_recent_eligible.csv"), row.names = TRUE)
+dat_result %>% round(., 3) %>% format(., nsmall = 3) %>% write.csv(., file.path("analysis-complete-case", "formatted-output", "H3-app-usage-moderators", "log_risk_ratio_scale_H3_engagement_most_recent_eligible_CI95.csv"), row.names = TRUE)
 ```
 
+## 90% Confidence Intervals
+
+```{r}
+summary(fit1, show_control_fit = TRUE, lincomb = Lmat, conf_level = 0.90)
+```
+
+```{r}
+dat_result_causal <- summary(fit1, show_control_fit = TRUE, lincomb = Lmat, conf_level = 0.90)[["causal_excursion_effect"]]
+dat_result_control <- summary(fit1, show_control_fit = TRUE, lincomb = Lmat, conf_level = 0.90)[["control_variables"]]
+
+dat_result <- rbind(dat_result_causal, dat_result_control)
+
+# Format output to 3 decimal places
+dat_result %>% round(., 3) %>% format(., nsmall = 3) %>% write.csv(., file.path("analysis-complete-case", "formatted-output", "H3-app-usage-moderators", "log_risk_ratio_scale_H3_engagement_most_recent_eligible_CI90.csv"), row.names = TRUE)
+```
+
+## Estimated effect on the risk ratio scale
+
+### 95% Confidence Intervals
+
+```{r}
+dat_results_contrast <- summary(fit1, show_control_fit = TRUE, lincomb = Lmat)$causal_excursion_effect[c(1,3),]
+```
+
+```{r}
+exp_estimates <- exp(dat_results_contrast[,"Estimate"])
+rrLB95 <- exp(dat_results_contrast[,"95% LCL"])
+rrUB95 <- exp(dat_results_contrast[,"95% UCL"])
+
+dat_exp_scale <- data.frame(exp_estimates = exp_estimates, rrLB95 = rrLB95, rrUB95 = rrUB95)
+
+dat_exp_scale
+
+# Format output to 3 decimal places
+dat_exp_scale %>% round(., 3) %>% format(., nsmall = 3) %>% write.csv(., file.path("analysis-complete-case", "formatted-output", "H3-app-usage-moderators", "risk_ratio_scale_H3_engagement_most_recent_eligible_CI95.csv"), row.names = TRUE)
+```
+
+### 90% Confidence Intervals
+
+```{r}
+dat_results_contrast <- summary(fit1, show_control_fit = TRUE, lincomb = Lmat, conf_level = 0.90)$causal_excursion_effect[c(1,3),]
+```
+
+```{r}
+exp_estimates <- exp(dat_results_contrast[,"Estimate"])
+rrLB <- exp(dat_results_contrast[,"90% LCL"])
+rrUB <- exp(dat_results_contrast[,"90% UCL"])
+
+dat_exp_scale <- data.frame(exp_estimates = exp_estimates, rrLB = rrLB, rrUB = rrUB)
+
+dat_exp_scale
+
+# Format output to 3 decimal places
+dat_exp_scale %>% round(., 3) %>% format(., nsmall = 3) %>% write.csv(., file.path("analysis-complete-case", "formatted-output", "H3-app-usage-moderators", "risk_ratio_scale_H3_engagement_most_recent_eligible_CI90.csv"), row.names = TRUE)
+```
