--- a/analysis-complete-case/analysis-H3-baseline-moderators.Rmd
+++ b/analysis-complete-case/analysis-H3-baseline-moderators.Rmd
@@ -1892,6 +1892,8 @@ if(length(participants_fully_dropped) > 0){
 }
 ```
 
+### Estimated effect on the log-risk ratio scale
+
 ```{r}
 fit1 <- emee(
   data = dat_for_analysis,
@@ -1903,18 +1905,20 @@ fit1 <- emee(
   control_formula = ~ gratitude + age + is_male + is_latino + is_not_latino_and_black + is_not_latino_and_other + baseline_tobacco_history + has_partner + income_val + hour_coinflip_local + days_between_v1_and_coinflip_local + any_response_2qs + engagement_most_recent_eligible, 
   availability = "eligibility"
 )
-
-summary(fit1, show_control_fit = TRUE)
 ```
 
+#### 95% CI's
+
 ```{r}
+summary(fit1, show_control_fit = TRUE)
+
 dat_result_causal <- summary(fit1, show_control_fit = TRUE)[["causal_excursion_effect"]]
 dat_result_control <- summary(fit1, show_control_fit = TRUE)[["control_variables"]]
 
 dat_result <- rbind(dat_result_causal, dat_result_control)
 
 # Format output to 3 decimal places
-dat_result %>% round(., 3) %>% format(., nsmall = 3) %>% write.csv(., file.path("analysis-complete-case", "formatted-output", "H3-baseline-moderators", "log_risk_ratio_scale_H3_gratitude.csv"), row.names = TRUE)
+dat_result %>% round(., 3) %>% format(., nsmall = 3) %>% write.csv(., file.path("analysis-complete-case", "formatted-output", "H3-baseline-moderators", "log_risk_ratio_scale_H3_gratitude_CI95.csv"), row.names = TRUE)
 ```
 
 ```{r}
@@ -1940,7 +1944,7 @@ g <- g + geom_errorbar() + geom_point(size=4, shape=21, fill="white") + scale_y_
 
 g
 
-ggsave(filename = file.path("analysis-complete-case", "formatted-output", "H3-baseline-moderators", "log_risk_ratio_scale_H3_gratitude.png"), width = 5, height = 3, units = "in")
+ggsave(filename = file.path("analysis-complete-case", "formatted-output", "H3-baseline-moderators", "log_risk_ratio_scale_H3_gratitude_CI95.png"), width = 5, height = 5, units = "in")
 ```
 
 ```{r}
@@ -1955,6 +1959,64 @@ g <- g + geom_errorbar() + geom_point(size=4, shape=21, fill="white") + scale_y_
 
 g
 
-ggsave(filename = file.path("analysis-complete-case", "formatted-output", "H3-baseline-moderators", "risk_ratio_scale_H3_gratitude.png"), width = 5, height = 3, units = "in")
+ggsave(filename = file.path("analysis-complete-case", "formatted-output", "H3-baseline-moderators", "risk_ratio_scale_H3_gratitude_CI95.png"), width = 5, height = 5, units = "in")
 ```
+
+#### 90% CI's
+
+```{r}
+summary(fit1, show_control_fit = TRUE, conf_level = 0.90)
+
+dat_result_causal <- summary(fit1, show_control_fit = TRUE, conf_level = 0.90)[["causal_excursion_effect"]]
+dat_result_control <- summary(fit1, show_control_fit = TRUE, conf_level = 0.90)[["control_variables"]]
+
+dat_result <- rbind(dat_result_causal, dat_result_control)
+
+# Format output to 3 decimal places
+dat_result %>% round(., 3) %>% format(., nsmall = 3) %>% write.csv(., file.path("analysis-complete-case", "formatted-output", "H3-baseline-moderators", "log_risk_ratio_scale_H3_gratitude_CI90.csv"), row.names = TRUE)
+```
+
+```{r}
+Lmat <- rbind(c(1,1),
+              c(1,2),
+              c(1,3),
+              c(1,4),
+              c(1,5),
+              c(1,6),
+              c(1,7))
+fit_with_contrast <- summary(fit1, show_control_fit = FALSE, lincomb = Lmat, conf_level = 0.90)
+```
+
+```{r}
+est <- (fit_with_contrast$causal_excursion_effect[3:9,"Estimate"])
+LB90 <- (fit_with_contrast$causal_excursion_effect[3:9,"90% LCL"])
+UB90 <- (fit_with_contrast$causal_excursion_effect[3:9,"90% UCL"])
+
+dat_plot <- data.frame(val = c(1,2,3,4,5,6,7), est = est, LB90 = LB90, UB90 = UB90)
+
+g <- ggplot(data = dat_plot, aes(x = val, y = est, ymin = LB90, ymax = UB90))
+g <- g + geom_errorbar() + geom_point(size=4, shape=21, fill="white") + scale_y_continuous(limits = c(-0.5, 1.5), breaks = seq(-0.5, 1.5, 0.5), name = "Log Risk Ratio and 90% CI's") + geom_abline(slope = 0, intercept = 0, color = "red", linewidth = 0.9) + scale_x_continuous(name = "Higher scores indicate higher gratitude", breaks = c(1,2,3,4,5,6,7), labels = c(1,2,3,4,5,6,7))
+
+g
+
+ggsave(filename = file.path("analysis-complete-case", "formatted-output", "H3-baseline-moderators", "log_risk_ratio_scale_H3_gratitude_CI90.png"), width = 5, height = 5, units = "in")
+```
+
+```{r}
+est <- exp(fit_with_contrast$causal_excursion_effect[3:9,"Estimate"])
+LB90 <- exp(fit_with_contrast$causal_excursion_effect[3:9,"90% LCL"])
+UB90 <- exp(fit_with_contrast$causal_excursion_effect[3:9,"90% UCL"])
+
+dat_plot <- data.frame(val = c(1,2,3,4,5,6,7), est = est, LB90 = LB90, UB90 = UB90)
+
+g <- ggplot(data = dat_plot, aes(x = val, y = est, ymin = LB90, ymax = UB90))
+g <- g + geom_errorbar() + geom_point(size=4, shape=21, fill="white") + scale_y_continuous(limits = c(0.5,3.5), breaks = seq(0.5, 3.5, 0.5), name = "Risk Ratio and 90% CI's") + geom_abline(slope = 0, intercept = 1, color = "red", linewidth = 0.9) + scale_x_continuous(name = "Higher scores indicate higher gratitude", breaks = c(1,2,3,4,5,6,7), labels = c(1,2,3,4,5,6,7))
+
+g
+
+ggsave(filename = file.path("analysis-complete-case", "formatted-output", "H3-baseline-moderators", "risk_ratio_scale_H3_gratitude_CI90.png"), width = 5, height = 5, units = "in")
+```
+
+
+
 
