--- a/analysis-complete-case/analysis-H3-baseline-moderators.Rmd
+++ b/analysis-complete-case/analysis-H3-baseline-moderators.Rmd
@@ -1922,25 +1922,23 @@ dat_result %>% round(., 3) %>% format(., nsmall = 3) %>% write.csv(., file.path(
 ```
 
 ```{r}
-Lmat <- rbind(c(1,1),
-              c(1,2),
-              c(1,3),
-              c(1,4),
-              c(1,5),
-              c(1,6),
-              c(1,7))
+vals_to_display <- seq(1,7,0.1)
+Lmat <- cbind(rep(1,length(vals_to_display)),
+              vals_to_display)
 fit_with_contrast <- summary(fit1, show_control_fit = FALSE, lincomb = Lmat)
 ```
 
 ```{r}
-est <- (fit_with_contrast$causal_excursion_effect[3:9,"Estimate"])
-LB95 <- (fit_with_contrast$causal_excursion_effect[3:9,"95% LCL"])
-UB95 <- (fit_with_contrast$causal_excursion_effect[3:9,"95% UCL"])
+est <- (fit_with_contrast$causal_excursion_effect[3:nrow(fit_with_contrast$causal_excursion_effect),"Estimate"])
+LB95 <- (fit_with_contrast$causal_excursion_effect[3:nrow(fit_with_contrast$causal_excursion_effect),"95% LCL"])
+UB95 <- (fit_with_contrast$causal_excursion_effect[3:nrow(fit_with_contrast$causal_excursion_effect),"95% UCL"])
 
-dat_plot <- data.frame(val = c(1,2,3,4,5,6,7), est = est, LB95 = LB95, UB95 = UB95)
+dat_plot <- data.frame(val = vals_to_display, est = est, LB95 = LB95, UB95 = UB95)
+
+dat_plot
 
 g <- ggplot(data = dat_plot, aes(x = val, y = est, ymin = LB95, ymax = UB95))
-g <- g + geom_errorbar() + geom_point(size=4, shape=21, fill="white") + scale_y_continuous(limits = c(-0.5, 1.5), breaks = seq(-0.5, 1.5, 0.5), name = "Log Risk Ratio and 95% CI's") + geom_abline(slope = 0, intercept = 0, color = "red", linewidth = 0.9) + scale_x_continuous(name = "Higher scores indicate higher gratitude", breaks = c(1,2,3,4,5,6,7), labels = c(1,2,3,4,5,6,7))
+g <- g + geom_errorbar() + geom_point(size=2, shape=21, fill="white") + scale_y_continuous(limits = c(-0.5, 1.5), breaks = seq(-0.5, 1.5, 0.5), name = "Log Risk Ratio and 95% CI's") + geom_abline(slope = 0, intercept = 0, color = "red", linewidth = 0.9) + scale_x_continuous(name = "Higher scores indicate higher gratitude", breaks = c(1,2,3,4,5,6,7), labels = c(1,2,3,4,5,6,7))
 
 g
 
@@ -1948,14 +1946,16 @@ ggsave(filename = file.path("analysis-complete-case", "formatted-output", "H3-ba
 ```
 
 ```{r}
-est <- exp(fit_with_contrast$causal_excursion_effect[3:9,"Estimate"])
-LB95 <- exp(fit_with_contrast$causal_excursion_effect[3:9,"95% LCL"])
-UB95 <- exp(fit_with_contrast$causal_excursion_effect[3:9,"95% UCL"])
+est <- exp(fit_with_contrast$causal_excursion_effect[3:nrow(fit_with_contrast$causal_excursion_effect),"Estimate"])
+LB95 <- exp(fit_with_contrast$causal_excursion_effect[3:nrow(fit_with_contrast$causal_excursion_effect),"95% LCL"])
+UB95 <- exp(fit_with_contrast$causal_excursion_effect[3:nrow(fit_with_contrast$causal_excursion_effect),"95% UCL"])
 
-dat_plot <- data.frame(val = c(1,2,3,4,5,6,7), est = est, LB95 = LB95, UB95 = UB95)
+dat_plot <- data.frame(val = vals_to_display, est = est, LB95 = LB95, UB95 = UB95)
+
+dat_plot
 
 g <- ggplot(data = dat_plot, aes(x = val, y = est, ymin = LB95, ymax = UB95))
-g <- g + geom_errorbar() + geom_point(size=4, shape=21, fill="white") + scale_y_continuous(limits = c(0.5,3.5), breaks = seq(0.5, 3.5, 0.5), name = "Risk Ratio and 95% CI's") + geom_abline(slope = 0, intercept = 1, color = "red", linewidth = 0.9) + scale_x_continuous(name = "Higher scores indicate higher gratitude", breaks = c(1,2,3,4,5,6,7), labels = c(1,2,3,4,5,6,7))
+g <- g + geom_errorbar() + geom_point(size=2, shape=21, fill="white") + scale_y_continuous(limits = c(0.5,3.5), breaks = seq(0.5, 3.5, 0.5), name = "Risk Ratio and 95% CI's") + geom_abline(slope = 0, intercept = 1, color = "red", linewidth = 0.9) + scale_x_continuous(name = "Higher scores indicate higher gratitude", breaks = c(1,2,3,4,5,6,7), labels = c(1,2,3,4,5,6,7))
 
 g
 
@@ -1977,25 +1977,23 @@ dat_result %>% round(., 3) %>% format(., nsmall = 3) %>% write.csv(., file.path(
 ```
 
 ```{r}
-Lmat <- rbind(c(1,1),
-              c(1,2),
-              c(1,3),
-              c(1,4),
-              c(1,5),
-              c(1,6),
-              c(1,7))
+vals_to_display <- seq(1,7,0.1)
+Lmat <- cbind(rep(1,length(vals_to_display)),
+              vals_to_display)
 fit_with_contrast <- summary(fit1, show_control_fit = FALSE, lincomb = Lmat, conf_level = 0.90)
 ```
 
 ```{r}
-est <- (fit_with_contrast$causal_excursion_effect[3:9,"Estimate"])
-LB90 <- (fit_with_contrast$causal_excursion_effect[3:9,"90% LCL"])
-UB90 <- (fit_with_contrast$causal_excursion_effect[3:9,"90% UCL"])
+est <- (fit_with_contrast$causal_excursion_effect[3:nrow(fit_with_contrast$causal_excursion_effect),"Estimate"])
+LB90 <- (fit_with_contrast$causal_excursion_effect[3:nrow(fit_with_contrast$causal_excursion_effect),"90% LCL"])
+UB90 <- (fit_with_contrast$causal_excursion_effect[3:nrow(fit_with_contrast$causal_excursion_effect),"90% UCL"])
 
-dat_plot <- data.frame(val = c(1,2,3,4,5,6,7), est = est, LB90 = LB90, UB90 = UB90)
+dat_plot <- data.frame(val = vals_to_display, est = est, LB90 = LB90, UB90 = UB90)
+
+dat_plot
 
 g <- ggplot(data = dat_plot, aes(x = val, y = est, ymin = LB90, ymax = UB90))
-g <- g + geom_errorbar() + geom_point(size=4, shape=21, fill="white") + scale_y_continuous(limits = c(-0.5, 1.5), breaks = seq(-0.5, 1.5, 0.5), name = "Log Risk Ratio and 90% CI's") + geom_abline(slope = 0, intercept = 0, color = "red", linewidth = 0.9) + scale_x_continuous(name = "Higher scores indicate higher gratitude", breaks = c(1,2,3,4,5,6,7), labels = c(1,2,3,4,5,6,7))
+g <- g + geom_errorbar() + geom_point(size=2, shape=21, fill="white") + scale_y_continuous(limits = c(-0.5, 1.5), breaks = seq(-0.5, 1.5, 0.5), name = "Log Risk Ratio and 90% CI's") + geom_abline(slope = 0, intercept = 0, color = "red", linewidth = 0.9) + scale_x_continuous(name = "Higher scores indicate higher gratitude", breaks = c(1,2,3,4,5,6,7), labels = c(1,2,3,4,5,6,7))
 
 g
 
@@ -2003,14 +2001,16 @@ ggsave(filename = file.path("analysis-complete-case", "formatted-output", "H3-ba
 ```
 
 ```{r}
-est <- exp(fit_with_contrast$causal_excursion_effect[3:9,"Estimate"])
-LB90 <- exp(fit_with_contrast$causal_excursion_effect[3:9,"90% LCL"])
-UB90 <- exp(fit_with_contrast$causal_excursion_effect[3:9,"90% UCL"])
+est <- exp(fit_with_contrast$causal_excursion_effect[3:nrow(fit_with_contrast$causal_excursion_effect),"Estimate"])
+LB90 <- exp(fit_with_contrast$causal_excursion_effect[3:nrow(fit_with_contrast$causal_excursion_effect),"90% LCL"])
+UB90 <- exp(fit_with_contrast$causal_excursion_effect[3:nrow(fit_with_contrast$causal_excursion_effect),"90% UCL"])
 
-dat_plot <- data.frame(val = c(1,2,3,4,5,6,7), est = est, LB90 = LB90, UB90 = UB90)
+dat_plot <- data.frame(val = vals_to_display, est = est, LB90 = LB90, UB90 = UB90)
+
+dat_plot
 
 g <- ggplot(data = dat_plot, aes(x = val, y = est, ymin = LB90, ymax = UB90))
-g <- g + geom_errorbar() + geom_point(size=4, shape=21, fill="white") + scale_y_continuous(limits = c(0.5,3.5), breaks = seq(0.5, 3.5, 0.5), name = "Risk Ratio and 90% CI's") + geom_abline(slope = 0, intercept = 1, color = "red", linewidth = 0.9) + scale_x_continuous(name = "Higher scores indicate higher gratitude", breaks = c(1,2,3,4,5,6,7), labels = c(1,2,3,4,5,6,7))
+g <- g + geom_errorbar() + geom_point(size=2, shape=21, fill="white") + scale_y_continuous(limits = c(0.5,3.5), breaks = seq(0.5, 3.5, 0.5), name = "Risk Ratio and 90% CI's") + geom_abline(slope = 0, intercept = 1, color = "red", linewidth = 0.9) + scale_x_continuous(name = "Higher scores indicate higher gratitude", breaks = c(1,2,3,4,5,6,7), labels = c(1,2,3,4,5,6,7))
 
 g
 
